GameOfLifeLab/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\PROGRA~1\Java\JDK17~1.0_6\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;\\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab
-d
\\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
\\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java
<---- end of javadoc command ---->
Loading source file \\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java...
Constructing Javadoc information...
\\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:1: error: package info.gridworld.actor does not exist
import info.gridworld.actor.Actor;
                           ^
\\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:2: error: package info.gridworld.actor does not exist
import info.gridworld.actor.ActorWorld;
                           ^
\\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:3: error: package info.gridworld.actor does not exist
import info.gridworld.actor.Rock;
                           ^
\\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:4: error: package info.gridworld.grid does not exist
import info.gridworld.grid.Grid;
                          ^
\\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:5: error: package info.gridworld.grid does not exist
import info.gridworld.grid.BoundedGrid;
                          ^
\\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:6: error: package info.gridworld.grid does not exist
import info.gridworld.grid.Location;
                          ^
\\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:18: error: cannot find symbol
    private ActorWorld world;
            ^
  symbol:   class ActorWorld
  location: class GameOfLife
\\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:107: error: cannot find symbol
    public Actor getActor(int row, int col)
           ^
  symbol:   class Actor
  location: class GameOfLife
Standard Doclet version 1.7.0_60
Building tree for all the packages and classes...
Generating \\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\GameOfLife.html...
\\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:35: warning - @post is an unknown tag.
\\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\GameOfLife.java:107: warning - @pre is an unknown tag.
Generating \\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\package-frame.html...
Generating \\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\package-summary.html...
Generating \\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating \\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\allclasses-frame.html...
Generating \\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\allclasses-noframe.html...
Generating \\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\index.html...
Generating \\NNHSSRV2\SELevitt$\GitHub\unit3DecisionsLoops\GameOfLifeLab\doc\stylesheet.css...
10 warnings
